k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft-vanilla
  labels:
    shared-gateway-access: "true"
---
