k8s/deploy-minecraft.yml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    shared-gateway-access: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minecraft
  name: minecraft
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      volumes:
        - name: nfs-data
          persistentVolumeClaim:
            claimName: minecraft-pvc-data
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: EULA
              value: "True"
            - name: TZ
              value: US/Eastern
            - name: ENABLE_ROLLING_LOGS
              value: "True"
            - name: EXISTING_OPS_FILE
              value: "SYNCHRONIZE"
            - name: OPS
              value: "snoozy9"
            - name: MAX_MEMORY
              value: "4G"
            - name: MAX_PLAYERS
              value: "50"
            - name: SPAWN_PROTECTION
              value: "0"
            - name: SNOOPER_ENABLED
              value: "false"
            - name: VIEW_DISTANCE
              value: "6"
          image: itzg/minecraft-server
          imagePullPolicy: Always
          name: minecraft
          ports:
            - containerPort: 25565
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: nfs-data
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "5Gi"
              cpu: "1"
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: minecraft-svc
  namespace: minecraft
spec:
  selector:
    app: minecraft
  ports:
    - port: 25565
      name: minecraft
      targetPort: 25565
      protocol: TCP
  type: ClusterIP

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-http-route
  namespace: minecraft
  labels:
    shared-gateway-access: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "minecraftvanilla.snoozyhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minecraft-svc
          kind: Service
          namespace: minecraft
          port: 25565

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft-tcp-route
  namespace: minecraft
  labels:
    shared-gateway-access: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: minecraft-tcp
  rules:
    - backendRefs:
        - name: minecraft-svc
          kind: Service
          namespace: minecraft
          port: 25565
